--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+
+    <title>profile edit data and skills - Bootdey.com</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
+
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -40,6 +58,11 @@
     <!-- custom css link -->
     <link rel="stylesheet" href="{%static '/css/home.css'%}" />
     <title>Expozure</title>
+
+
+
+    
+
     <style>
       #headerPopup{
         width:75%;
@@ -58,7 +81,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="{% url 'Home' %}"
         ><img
-          src="{%static '/images/Main logo slogan_edited 1.png'%}"
+          src="{%static '/images/logo_1.jpeg'%}"
+          width="226"
           alt=""
           srcset=""
       /></a>
