--- a/templates/Profile.html
+++ b/templates/Profile.html
@@ -15,18 +15,25 @@
     <h1>{{request.user.profil.Name}}</h1>
     <h2>Profession</h2>
     <div class="smailllinks">
+      
+      {% if request.user.profil.emiall %}
       <a href="mailto:{{request.user.profil.emiall}}"
         ><i
           class="icon fa-regular fa-envelope"
           style="color: #fff; font-size: 2.5rem; margin: 0.5rem 2rem 1rem 0rem"
         ></i
       ></a>
+      {% endif %}
+      {% if request.user.profil.number %}
+
       <a href="tel:{{request.user.profil.number}}">
         <i
           class="icon fa-solid fa-phone"
           style="color: #fff; font-size: 2.5rem; margin: 0.5rem 1rem 1rem 0rem"
         ></i
       ></a>
+      {% endif %}
+
     </div>
   </div>
   <div class="linkbutton">
