--- a/templates/shareprofile.html
+++ b/templates/shareprofile.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %} {% load static %}
 
+{% if profile.color %}
+<html lang="en" style="--main-color:{% block html_color %}{{profile.color}}{% endblock html_color %};">
+{% else %}
+<html lang="en" style="--main-color:#ff416c;">
+{% endif %}
 {% block nav %}{% endblock nav %}
 {% block Content %}
 
@@ -19,22 +24,29 @@
       <h1>{{profile.Name}}</h1>
       <h2>Profession</h2>
       <div class="smailllinks">
-        <a href="mailto:{{request.user.profil.emiall}}"
+        
+      {% if profile.emiall %}
+      <a href="mailto:{{profile.emiall}}"
         ><i
-            class="icon fa-regular fa-envelope"
-            style="color: #fff; font-size: 2.5rem; margin: 0.5rem 2rem 1rem 0rem"
-          ></i
-        ></a>
-        <a href="tel:{{request.user.profil.number}}">
-            <i
-            class="icon fa-solid fa-phone"
-            style="color: #fff; font-size: 2.5rem; margin: 0.5rem 1rem 1rem 0rem"
-          ></i
-        ></a>
+          class="icon fa-regular fa-envelope"
+          style="color: #fff; font-size: 2.5rem; margin: 0.5rem 2rem 1rem 0rem"
+        ></i
+      ></a>
+      {% endif %}
+      {% if profile.number %}
+
+      <a href="tel:{{profile.number}}">
+        <i
+          class="icon fa-solid fa-phone"
+          style="color: #fff; font-size: 2.5rem; margin: 0.5rem 1rem 1rem 0rem"
+        ></i
+      ></a>
+      {% endif %}
+
       </div>
     </div>
     <div class="linkbutton">
-      {% for button in request.user.links_set.all %}
+      {% for button in profile.user.links_set.all %}
       
       {% if button.name == "Youtube" %}
   
@@ -54,7 +66,7 @@
         role="button"
         class="in ghost2 p-3"
         id="{{button.id}}"
-              href="{{button.link}}"
+        href="{{button.link}}"
 
       style="color: black;"
       >
