--- a/static/css/home.css
+++ b/static/css/home.css
@@ -8,6 +8,10 @@
 }
 body {
   background-color: var(--main-color);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
 }
 .container {
   display: flex;
@@ -180,6 +184,7 @@ footer {
   color: #fff;
   font-size: 1rem;
   text-align: center;
+  margin-top: auto;
 }
 footer a:hover {
   color: #fff;
