--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -236,7 +236,7 @@
                       </div>
                       <div class="col-sm-9 text-secondary">
                         <input
-                          type="text"
+                          type="url"
                           class="form-control"
                           placeholder="My Instagram Profile"
                         />
