--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -217,17 +217,15 @@
               <div class="col-sm-12">
                 <div class="card">
                   <div class="card-body">
+                    <form action="{% url 'link_form_handler' %}" method="post">
+                      {% csrf_token %}
                     <h5 class="d-flex align-items-center mb-3">Add Link</h5>
                     <div class="row mb-3">
                       <div class="col-sm-3">
                         <h6 class="mb-0">Link Title</h6>
                       </div>
                       <div class="col-sm-9 text-secondary">
-                        <input
-                          type="text"
-                          class="form-control"
-                          placeholder="My Instagram Profile"
-                        />
+                        {% render_field form3.link_name class="form-control" placeholder="Enter Link Title" %}
                       </div>
                     </div>
                     <div class="row mb-3">
@@ -235,49 +233,26 @@
                         <h6 class="mb-0">Link</h6>
                       </div>
                       <div class="col-sm-9 text-secondary">
-                        <input
-                          type="url"
-                          class="form-control"
-                          placeholder="My Instagram Profile"
-                        />
+                        {% render_field form3.link class="form-control" placeholder="Enter Link" %}
                       </div>
                     </div>
                     <div class="row mb-3">
                       <div class="col-sm-3"></div>
                       <div class="col-sm-9 text-secondary">
-                        <div class="dropdown">
-                          <button
-                            class="btn btn-secondary dropdown-toggle"
-                            type="button"
-                            id="dropdownMenuButton"
-                            data-toggle="dropdown"
-                            aria-haspopup="true"
-                            aria-expanded="false"
-                          >
-                            Link Type
-                          </button>
-                          <div
-                            class="dropdown-menu"
-                            aria-labelledby="dropdownMenuButton"
-                          >
-                            <a class="dropdown-item" href="#">Facebook</a>
-                            <a class="dropdown-item" href="#">Instagram</a>
-                            <a class="dropdown-item" href="#">Youtube Video</a>
-                            <a class="dropdown-item" href="#">Other Links</a>
-                          </div>
-                        </div>
+                        {% render_field form3.name class="form-control"  %}
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-sm-3"></div>
                       <div class="col-sm-9 text-secondary">
                         <input
-                          type="button"
+                          type="submit"
                           class="btn btn-primary px-4"
                           value="Save"
                         />
                       </div>
                     </div>
+                  </form>
                   </div>
                 </div>
               </div>
