--- a/templates/model_data.html
+++ b/templates/model_data.html
@@ -71,7 +71,12 @@
     <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <h1>{{link.name}}</h1>
-    {{form}}
+    {% load crispy_forms_tags %}
+<div class="row">
+  <div class="col-12">
+    {{form|crispy}}
+  </div>
+</div>
     <button
       type="submit"
       class="btn btn-lg"
