added link section in edit profile page

--- a/templates/Profile.html
+++ b/templates/Profile.html
@@ -42,7 +42,7 @@
     {% if button.name == "Youtube" %}
 
     <a
-      class="yt ghost2 p-3"
+      class="yt ghost2 p-md-3 p-sm-1"
       style="color: black;"
       href="{% url 'update_link' button.id %}"
 
@@ -54,7 +54,7 @@
 
       <a
       role="button"
-      class="in ghost2 p-3"
+      class="in ghost2 p-md-3 p-sm-1"
       id="{{button.id}}"
     href="{% url 'update_link' button.id %}"
     style="color: black;"
@@ -67,7 +67,7 @@
 
       <a
       role="button"
-      class="in ghost2 p-3"
+      class="in ghost2 p-md-3 p-sm-1"
       id="{{button.id}}"
     href="{% url 'update_link' button.id %}"
     style="color: black;"
@@ -80,7 +80,7 @@
 
       <a
       role="button"
-      class="in ghost2 p-3"
+      class="in ghost2 p-md-3 p-sm-1"
       id="{{button.id}}"
     href="{% url 'update_link' button.id %}"
     style="color: black;"
@@ -93,7 +93,7 @@
 
       <a
       role="button"
-      class="in ghost2 p-3"
+      class="in ghost2 p-md-3 p-sm-1"
       id="{{button.id}}"
     href="{% url 'update_link' button.id %}"
     style="color: black;"
