--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -217,7 +217,7 @@
               <div class="col-sm-12">
                 <div class="card">
                   <div class="card-body">
-                    <form action="{% url 'link_form_handler' %}" method="post">
+                    <form action="{% url 'link_form_handler' %}" method="post" enctype="multipart/form-data">
                       {% csrf_token %}
                     <h5 class="d-flex align-items-center mb-3">Add Link</h5>
                     <div class="row mb-3">
