--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -133,7 +133,7 @@
           <div class="col-lg-8">
             <div class="card">
               <div class="card-body">
-                <form method="post">
+                <form method="post"  enctype="multipart/form-data">
                   {% csrf_token %}
                 <div class="row mb-3">
                   <div class="col-sm-3">
