--- a/templates/base.html
+++ b/templates/base.html
@@ -1,141 +1,170 @@
 {% load static %}
 <!DOCTYPE html>
-{% if request.user.profil.color %}
-<html lang="en" style="--main-color:{% block html_color %}{{request.user.profil.color}}{% endblock html_color %};">
-  {% else %}
-  <html lang="en" style="--main-color:#ff416c;">
+{% if request.user.profil.color == "cloudy white" %}
+<html
+  lang="en"
+  style="--main-color:#fff;--text-color: #808080;--link-color:#808080; --button-color: #808080;"
+>
+{% elif request.user.profil.color == "Air white" %}
+<html
+  lang="en"
+  style="--main-color:#fff;--text-color: #000;--link-color:#000; --button-color: #000;"
+>
+{% elif request.user.profil.color == "Aurora B" %}
+<html
+  lang="en"
+  style="--main-color:linear-gradient(60deg, #efa51a 10%, rgb(238, 0, 99) 100%) ;--text-color: #fff;--link-color:#fff; --button-color: #fff;"
+>
+{% elif request.user.profil.color == "Mid Night" %}
+<html
+  lang="en"
+  style="--main-color:#000;--text-color: #fff;--link-color:#fff; --button-color: #fff;"
+>
+{% elif request.user.profil.color == "Cool Grey" %}
+<html
+  lang="en"
+  style="--main-color:linear-gradient(60deg, #D3D3D3 10%, #fff 100%);--text-color: #000;--link-color:#000; --button-color: #000;"
+>
+{% else %}
+<html
+  lang="en"
+  style="--main-color:#fff;--text-color: #808080;--link-color:#808080; --button-color: #808080;"
+>
+
 {% endif %}
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+      <title>profile edit data and skills - Bootdey.com</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+      {% comment %} htmx {% endcomment %}
+      <script src="https://unpkg.com/htmx.org@1.7.0"></script>
 
-    <title>profile edit data and skills - Bootdey.com</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css"
-    />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
+      <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+      />
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
+      <link rel="stylesheet" href="styles.css" />
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css"
+      />
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
 
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+      />
+      <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous"
+      />
+      <script
+        src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"
+      ></script>
+      <!-- custom css link -->
+      <link rel="stylesheet" href="{%static '/css/home.css'%}" />
+      <title>Expozure</title>
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-    <!-- custom css link -->
-    <link rel="stylesheet" href="{%static '/css/home.css'%}" />
-    <title>Expozure</title>
+      <style>
+        #headerPopup {
+          width: 75%;
+          margin: 0 auto;
+        }
 
+        #headerPopup iframe {
+          width: 100%;
+          margin: 0 auto;
+        }
+      </style>
+    </head>
+    <body>
+      {% block nav %}
 
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{% url 'Home' %}"
+          ><img
+            src="{%static '/images/logo_1.jpeg'%}"
+            width="226"
+            alt=""
+            srcset=""
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-    
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'EditProfile'%}"
+                >Edit Profile
+              </a>
+            </li>
 
-    <style>
-      #headerPopup{
-        width:75%;
-        margin:0 auto;
-      }
-
-      #headerPopup iframe{
-        width:100%;
-        margin:0 auto;
-      }
-    </style>
-  </head>
-  <body>
-    {% block nav %}
-      
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="{% url 'Home' %}"
-        ><img
-          src="{%static '/images/logo_1.jpeg'%}"
-          width="226"
-          alt=""
-          srcset=""
-      /></a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'EditProfile'%}">Edit Profile </a>
-          </li>
-
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'Profile'%} ">Profile</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'ShareProfile' request.user.profil.slug %}">Share Profile</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <a
-            class="btn my-2 my-sm-0"
-            type="submit"
-            href="{% url 'Logout' %}"
-            style="margin-right: 1rem; background-color: #b97b11; color: #fff"
-          >
-            Log out
-          </a>
-        </form>
-      </div>
-    </nav>
-    {% endblock nav %}
-
-    {% block Content %} {% endblock %}
-    <footer class="ftr">
-      <div class="topcontainer">
-        <p class="mt-3">Via</p>
-        <img
-          src="{%static '/images/Main logo slogan_edited 1.png'%}"
-          alt=""
-          srcset=""
-        />
-      </div>
-      <a href="#">Buy Expozure Card</a>
-    </footer>
-  </body>
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'Profile'%} ">Profile</a>
+            </li>
+          
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <a
+              class="btn my-2 my-sm-0"
+              type="submit"
+              href="{% url 'Logout' %}"
+              style="margin-right: 1rem; background-color: #e80a50; color: #fff"
+            >
+              Log out
+            </a>
+          </form>
+        </div>
+      </nav>
+      {% endblock nav %} {% block Content %} {% endblock %}
+      <footer class="ftr">
+        <div class="topcontainer">
+          <p class="mt-3">via</p>
+          <img
+            src="{%static '/images/Main logo slogan_edited 1.png'%}"
+            alt=""
+            srcset=""
+          />
+          <a href="#" class="btn">Buy Expozure Card</a>
+        </div>
+        {% comment %} <a href="#">Buy Expozure Card</a> {% endcomment %}
+      </footer>
+      <script>
+        document.body.addEventListener("htmx:configRequest", (event) => {
+          event.detail.headers["X-CSRFToken"] = "{{ csrf_token }}";
+        });
+      </script>
+    </body>
+  </html>
 </html>
